--- a/Course_Messenger.App/Course_Messenger.App.csproj
+++ b/Course_Messenger.App/Course_Messenger.App.csproj
@@ -99,6 +99,9 @@
 	  <MauiXaml Update="Views\SignUpPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\UserPhotoView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
