--- a/Course_Messenger.App/Course_Messenger.App.csproj
+++ b/Course_Messenger.App/Course_Messenger.App.csproj
@@ -87,6 +87,9 @@
 	  <MauiXaml Update="Views\ChatsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\ChatUserPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\ContactsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
